# ISP-SpeedKarma

./: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
.github/workflows/: release.yml
icons/: icon.icns
src/: lib.rs  main.rs
src/core/: app_state.rs  config.rs  error.rs  intelligence.rs  logging.rs  mod.rs
src/data/: migrations.rs  mod.rs  models.rs  repository.rs
src/network/: disguise.rs  keeper.rs  mod.rs  monitor.rs  optimizer.rs  servers.rs  speedtest_runner.rs  stealth.rs
src/ui/: advanced.rs  mod.rs  panel.rs  progress.rs  status.rs  tray.rs
tests/: integration_tests.rs  network_simulation_tests.rs  pattern_learning_tests.rs  unit_tests.rs
tests/integration/: dpi_evasion_tests.rs  effectiveness_analysis_tests.rs  server_connection_tests.rs  stealth_integration_tests.rs
tests/unit/: dpi_bypass_tests.rs
